fix z-index on contact us hover conflictin w toast

--- a/src/components/contact/theme.css
+++ b/src/components/contact/theme.css
@@ -43,7 +43,7 @@
   .contactActive {
     display: none;
     position: absolute;
-    z-index: 1;
+    z-index: 1001;
     top: 0;
     left: -40px;
 
